fix: forEach ai bottoni delle pagine

--- a/05-07/index.html
+++ b/05-07/index.html
@@ -12,9 +12,9 @@
     <main>
       <div class="productContainer"></div>
       <div class="btnContainer">
-        <h3 class="pageBtn btn1">1</h3>
-        <h3 class="pageBtn btn2">2</h3>
-        <h3 class="pageBtn btn3">3</h3>
+        <h3 class="pageBtn btn1" id="1">1</h3>
+        <h3 class="pageBtn btn2" id="2">2</h3>
+        <h3 class="pageBtn btn3" id="3">3</h3>
       </div>
     </main>
     <footer></footer>
